View Issue Details

IDProjectCategoryView StatusLast Update
0025660Open CASCADEOCCT:Modeling Algorithmspublic2015-05-14 15:33
ReporteramlAssigned Tobugmaster  
PrioritynormalSeverityminor 
Status closedResolutionfixed 
Product Version6.8.0 
Target Version6.9.0Fixed in Version6.9.0 
Summary0025660: Project command produce wrong 2dcurve
DescriptionComputed 2d curve have oscillations, but it should be line in 2d parameters space.
Steps To Reproducerestore c3d
restore surf
project c2d c3d surf

dump c2d:
1) should give sequential set of points on "y" coord in poles section, i.e. Pole(i+1).Y() > Pole(i).Y()
2) "y" coord of first pole should be 0.0.
3) "y" coord of last pole should be 6.96771797765.
TagsNo tags attached.
Test case numberbugs moddata_3(013) bug25660

Attached Files

  • c3d (4,302 bytes)
  • surf (4,341 bytes)

Activities

aml

2014-12-25 14:48

developer  

c3d (4,302 bytes)

aml

2014-12-25 14:48

developer  

surf (4,341 bytes)

git

2014-12-25 14:55

administrator   ~0035718

Branch CR25660 has been created by aml.

SHA-1: d1c34cf2f95ee0605c2b2c56dbe7e0eac1402de2


Detailed log of new commits:

Author: aml
Date: Thu Dec 25 14:55:03 2014 +0300

    0025660: Project command produce wrong 2dcurve
    
    Changed starting point of Newton optimization.

aml

2014-12-25 14:57

developer   ~0035719

Dear abv,
Please check current state of branch CR25660.

abv

2014-12-25 15:58

manager   ~0035726

Reviewed, please test.

Alexander, please explain how to check the result of the commands listed in 'steps to reproduce'

mkv

2014-12-30 16:07

tester   ~0035898

Dear BugMaster,
Branch CR25660 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: d1c34cf2f95ee0605c2b2c56dbe7e0eac1402de2

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 0 (0 on master)

products component :
Linux: 11 (11 on master)
Windows: 1 (1 on master)

Regressions/Differences:
http://occt-tests.nnov.opencascade.com/CR25660-master-products/Debian60-64/sat/doc_5/H5.html
http://occt-tests.nnov.opencascade.com/CR25660-master-products/Windows-32-VC10/sat/doc_5/H5.html
sat doc_5(005) H5: FAILED

http://occt-tests.nnov.opencascade.com/CR25660-master-products/Debian60-64/sat/doc_5/H6.html
http://occt-tests.nnov.opencascade.com/CR25660-master-products/Windows-32-VC10/sat/doc_5/H6.html
sat doc_5(004) H6: FAILED

Testing cases:
http://occt-tests.nnov.opencascade.com/CR25660-master-occt/Debian60-64/bugs/moddata_3/bug25660.html
http://occt-tests.nnov.opencascade.com/CR25660-master-occt/Windows-32-VC10/bugs/moddata_3/bug25660.html
bugs moddata_3(013) bug25660: OK

Testing on Linux:
occt component :
Total MEMORY difference: 367289304 / 367802156
Total CPU difference: 49441.790000000045 / 51439.64000000015
products component :
Total MEMORY difference: 112308796 / 112354336
Total CPU difference: 16611.21999999997 / 16662.76999999999

Testing on Windows:
occt component :
Total MEMORY difference: 277760136 / 277264380
Total CPU difference: 38949.234375 / 37470.1092007
products component :
Total MEMORY difference: 72331636 / 71315520
Total CPU difference: 11028.625 / 10252.312784399996

There are following differences in images found by testdiff.
http://occt-tests.nnov.opencascade.com/CR25660-master-occt/Debian60-64/diff-Debian60-64.html
http://occt-tests.nnov.opencascade.com/CR25660-master-occt/Windows-32-VC10/diff-Windows-32-VC10.html
IMAGE bugs modalg_5 bug24012: bug24012_Driver1_Viewer1_View1.png differs

git

2014-12-30 16:07

administrator   ~0035899

Branch CR25660 has been updated by mkv.

SHA-1: d594c4fc67f69ccf68bc7742e415d4aaed3b0cbd


Detailed log of new commits:

Author: mkv
Date: Tue Dec 30 16:06:23 2014 +0300

    Test case for issue CR25660

mkv

2014-12-30 16:08

tester   ~0035900

Dear aml,
could you please review test case bugs/moddata_3(013)/bug25660

aml

2015-01-12 13:20

developer   ~0035951

Dear mkv,

1)IMAGE bugs modalg_5 bug24012: bug24012_Driver1_Viewer1_View1.png differs
Test case created, but bug not fixed (look into 24012 bug description), so change of output image is normal in this case.

2) sat doc_5(005) H5: FAILED
Please update tolerance section in reference data, because tolerance decreased.

3) sat doc_5(005) H5: FAILED
According to log output this is improvement, please update this test case.

4)test case bugs/moddata_3(013)/bug25660
Testcase is OK.

mkv

2015-01-15 13:41

tester   ~0036100

OK. Branch CR25660 is TESTED.

git

2015-01-26 12:32

administrator   ~0036531

Branch CR25660 has been deleted by inv.

SHA-1: d594c4fc67f69ccf68bc7742e415d4aaed3b0cbd

Related Changesets

occt: master 4f0d73a9

2015-01-15 12:33:15

aml


Committer: bugmaster Details Diff
0025660: Project command produce wrong 2dcurve

Changed starting point of Newton optimization.

Test case for issue CR25660
Affected Issues
0025660
mod - src/ProjLib/ProjLib_CompProjectedCurve.cxx Diff File
add - tests/bugs/moddata_3/bug25660 Diff File

Issue History

Date Modified Username Field Change
2014-12-25 14:47 aml New Issue
2014-12-25 14:47 aml Assigned To => aml
2014-12-25 14:48 aml File Added: c3d
2014-12-25 14:48 aml File Added: surf
2014-12-25 14:55 git Note Added: 0035718
2014-12-25 14:57 aml Note Added: 0035719
2014-12-25 14:57 aml Assigned To aml => abv
2014-12-25 14:57 aml Status new => resolved
2014-12-25 15:58 abv Note Added: 0035726
2014-12-25 15:58 abv Assigned To abv => bugmaster
2014-12-25 15:58 abv Status resolved => reviewed
2014-12-25 15:59 mkv Assigned To bugmaster => mkv
2014-12-25 18:11 aml Description Updated
2014-12-25 18:11 aml Steps to Reproduce Updated
2014-12-30 16:07 mkv Note Added: 0035898
2014-12-30 16:07 git Note Added: 0035899
2014-12-30 16:08 mkv Note Added: 0035900
2014-12-30 16:08 mkv Assigned To mkv => aml
2014-12-30 16:08 mkv Status reviewed => feedback
2014-12-30 16:08 mkv Test case number => bugs moddata_3(013) bug25660
2015-01-12 13:20 aml Note Added: 0035951
2015-01-12 13:23 aml Assigned To aml => mkv
2015-01-15 13:41 mkv Note Added: 0036100
2015-01-15 13:41 mkv Status feedback => tested
2015-01-15 13:46 mkv Assigned To mkv => bugmaster
2015-01-16 13:37 bugmaster Changeset attached => occt master 4f0d73a9
2015-01-16 13:37 bugmaster Status tested => verified
2015-01-16 13:37 bugmaster Resolution open => fixed
2015-01-26 12:32 git Note Added: 0036531
2015-05-14 15:29 aiv Status verified => closed
2015-05-14 15:33 aiv Fixed in Version => 6.9.0