0025660: Project command produce wrong 2dcurve

Changed starting point of Newton optimization.

Test case for issue CR25660